# dfp_os

./: .coverage 2  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  DFP OS Audit Log Microservice.md  DO_THIS_JEREMY.md  Dockerfile  PRINT_FILE_COST_FLOW.md  PROMPTS.md  README.md  README_START_HERE.md  TODO.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  deploy 2.sh  deploy.sh  docker-compose.yml  expenses-receipt.md  new_ideas.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  test.json
.github/: PROJECT_SETUP.md  labels.yml
Not_Needed/: README.md
app/: __init__.py  celery_app.py  cli.py  config.py  config_markdown.py  extensions.py  module_registry.py  theme_registry.py
docs/: AI Design Trend Scout Implementation.md  AI_ideas.md  DFPos Intelligence microservice.md  New Ideas by Category.md  Production_Gap_Prompt 2.md  Start_Stop_Market 2.md  Trend Scout Production Readiness Gap Remediation Roadmap 2.md  Trend Scout Production Roadmap.md  Ultimate New Ideas Execution Prompt.md  audit.md  codex_build_prompt.md  contrast pmp vs current analysis.md  contributing.md  cutting_edge_features.md  expenses-receipt.md  gap_fix_results.md  import_historical_prompt.md  model_analysis_workflow.md  mqtt.md  new_ideas_execution_report.md  phase_4_5_themes_opencode_prompt.md  pmp.md  production_database.md  production_readiness_scorecard.md  receipt-expense-workflow.md  trend_scout_setup.md
erank results/: 3d_printed_fidget_toy_keyword_report.md  board_game_3d_printing_keyword_report.md  custom_name_keychain_keyword_report(1).md  flexi_animal_keyword_report.md  personalized_teacher_desk_sign_keyword_report.md
pmp/: __init__.py  bitmap.py  gcode.py  packing.py  pyodide.asm.js  pyodide.js  stl.py  threemf.py  u1_project_settings.json  web_entry.py  worker.js
scripts/: sync-labels.sh
services/audit-log/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/audit-log/alembic/: env.py
services/audit-log/alembic/versions/: 0001_create_audit_events_table.py
services/audit-log/app/: config.py  database.py  main.py  security.py  telemetry.py
services/audit-log/app/api/routes/: audit_events.py  health.py
services/audit-log/app/client_examples/: dfp_audit_client.py
services/audit-log/app/models/: __init__.py
services/audit-log/app/schemas/: __init__.py  health.py
services/audit-log/app/services/: audit_search.py  audit_writer.py  hashing.py  redis_streams.py
services/audit-log/app/tests/: conftest.py  test_create_audit_event.py  test_hash_chain.py  test_health.py  test_idempotency.py  test_search_audit_events.py
services/audit-log/app/workers/: audit_stream_worker.py
services/dfpos-api-docs/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/dfpos-api-docs/app/: __init__.py  cli.py  config.py  main.py  routes.py
services/dfpos-api-docs/app/templates/: error.html  redoc.html
services/dfpos-api-docs/scripts/: build.sh  fetch-spec.sh  validate-spec.sh
services/dfpos-api-docs/tests/: test_routes.py
services/intelligence/: .dockerignore  .env 2.example  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/intelligence/alembic/: env.py
services/intelligence/alembic/versions/: 0001_create_intelligence_phase_1_4_tables.py  0002_create_warehouse_and_market_advisor.py  0003_create_rag_ask_and_decision_log 2.py  0004_create_legacy_import_staging_tables 2.py  0005_create_promoted_legacy_tables 2.py  0006_add_missing_intelligence_models 2.py  0006_add_missing_intelligence_models.py  0007_create_normalized_pipeline_tables 2.py
services/intelligence/app/: config.py  database 2.py  main.py  security.py
services/intelligence/app/api/routes/: advisor 2.py  health 2.py  imports.py  knowledge.py  legacy_review_gui 2.py  legacy_review_gui.py  mappings 2.py  pipeline.py  warehouse.py
services/intelligence/app/models/: __init__.py
services/intelligence/app/schemas/: health.py  imports.py  knowledge.py  mappings 2.py  warehouse 2.py  warehouse.py
services/intelligence/app/services/: ask_dfp.py  decision_log 2.py  knowledge.py  legacy_mariadb.py  legacy_promotion.py  legacy_warehouse.py  mapping.py  market_advisor 2.py  market_advisor.py  normalized_pipeline.py  square_import 2.py  square_import.py  warehouse.py
services/intelligence/app/templates/: legacy_review.html
services/intelligence/app/tests/: conftest.py  test_health.py  test_knowledge_ask_decisions 2.py  test_legacy_import_pipeline.py  test_legacy_mariadb.py  test_mappings 2.py  test_security 2.py  test_square_import.py  test_warehouse_and_advisor.py
services/intelligence/app/tests/fixtures/: square_items_sample 2.csv
tests/: conftest.py  db_support.py  test_alignment_pass.py  test_api_tokens.py  test_api_workflow_guards 2.py  test_app.py  test_auth.py  test_cli.py  test_coverage.py  test_coverage2.py  test_foundation_hardening.py  test_milestone4_product_ops.py  test_milestone5_printer_reliability.py  test_milestone6_pickup_scheduler.py  test_milestone7_booth_mode.py  test_model_analysis_parser.py  test_openapi_spec.py  test_phase2_catalog.py  test_phase3_orders.py  test_phase4_5_themes.py  test_phase4_pos.py  test_phase5_markets_expenses.py  test_phase6_analytics.py  test_pmp.py  test_product_asset_storage.py  test_promotion.py  test_public_storefront.py  test_rate_limiting.py  test_receipts.py  test_report_studio.py  test_security_config 2.py  test_settings.py  (+1 more)
(+401 files in other folders)
