[project]
name = "dfp-os"
version = "0.1.0"
description = "Dude Fish OS foundation for Dude Fish Printing."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "boto3>=1.39.0",
    "celery>=5.5.0",
    "cloudscraper>=1.2.71",
    "click>=8.1.8",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-smorest>=0.46.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "marshmallow>=3.26.1",
    "numpy>=2.2.0",
    "openai>=1.68.0",
    "opencv-python-headless>=4.10.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "redis>=5.2.0",
    "requests>=2.34.2",
    "rich>=14.0.0",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.41",
    "trimesh>=4.5.0",
    "wtforms>=3.2.1",
    "feedparser>=6.0.12",
    "flask-dotenv>=0.1.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.black]
line-length = 100
target-version = ["py314"]
